examples/test/testpolicy3912.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3912
  namespace: namespace134
spec:
  podSelector:
    matchLabels:
      key47: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value34
          key41: value9
          key14: value1
      podSelector:
        matchLabels:
          key49: value19
          key44: value7
